php.net |  support |  documentation |  report a bug |  advanced search |  search howto |  statistics |  random bug |  login
Bug #41477 ReflectionParameter getName returns null
Submitted: 2007-05-23 17:07 UTC Modified: 2007-05-27 17:46 UTC
From: proofek at gmail dot com Assigned:
Status: Closed Package: Class/Object related
PHP Version: 5.2.2 OS: Linux (Debian)
Private report: No CVE-ID: None
 [2007-05-23 17:07 UTC] proofek at gmail dot com
Description:
------------
ReflectionParameter getName returns null for SoapClient object.

Happend on 5.2.0 too.

Reproduce code:
---------------
$objRfClass = new ReflectionClass('SoapClient');
$objRfMethod = $objRfClass->getMethod('__soapCall');
$arrParams = $objRfMethod->getParameters();
foreach($arrParams as $objRfParam)
{
        var_dump($objRfParam->getName());
}



Expected result:
----------------
Param names?

Actual result:
--------------
NULL
NULL
NULL
NULL
NULL

Patches

Pull Requests

History

AllCommentsChangesGit/SVN commitsRelated reports
 [2007-05-27 17:46 UTC] iliaa@php.net
This bug has been fixed in CVS.

Snapshots of the sources are packaged every three hours; this change
will be in the next snapshot. You can grab the snapshot at
http://snaps.php.net/.
 
Thank you for the report, and for helping us make PHP better.


 
PHP Copyright © 2001-2026 The PHP Group
All rights reserved.
Last updated: Fri Sep 25 18:00:01 2026 UTC