Fixed bug #41477 (no arginfo about SoapClient::__soapCall()).